# ftl

./: CMakeLists.txt  LICENSE  Makefile  README.md  test.cpp
examples/project_euler/: problems.cpp  timestamp.h
include/ftl/: enumerate.h  enumeration.h  ftl.h  memoize.h  optional.h  seq.h  unfold.h  utils.h  zip.h
test/: gtest_enum.cpp  gtest_memoize.cpp  gtest_seq.cpp  gtest_unfold.cpp  gtest_zip.cpp
